# SportRoster

./: .gitignore  CMakeLists.txt  README.md  SportRoster.exe — ярлык.lnk  icon.aps  icon.rc  Рабочий стол.lnk
include/: ApplicationCore.h  ConsoleManager.h  IApplicationCore.h  MainMenu.h  Menu.h  MenuFactory.h  MenuFactoryFactory.h  MenuType.h  TUI.h  TUIMenuFactory.h  UI.h  UIFactory.h
include/Core/: ApplicationCore.h  Player.h  Sort.h  Storage.h  Team.h  Utils.h
include/Menu/: AddPlayerMenu.h  AnalyticsMenu.h  CreateMenu.h  DeleteMenu.h  EditMenu.h  MainMenu.h  Menu.h  MenuFactory.h  MenuFactoryFactory.h  MenuType.h  SortMenu.h  TUIMenuFactory.h  ViewTeamMenu.h
include/Message/: ConfirmMSG.h  FatalErrorMSG.h  Message.h  NotificationMSG.h
include/UI/: ConsoleManager.h  EditBox.h  Image.h  Images.h  TUI.h  UI.h  UIFactory.h  UIType.h
include/UI/Widgets/: EditBox.h  EditLine.h  Slider.h  TextBox.h
res/img/: boy_with_ball.txt  sad_boy.txt  team.txt  title.txt  title_.txt  title_1.txt
res/img/main_menu_assert/: boxer.txt  diver.txt  figure_skater.txt  figure_skater_2.txt  football_player.txt  girlSwimmer.txt  hockey_player.txt  swimmer.txt
src/: Application.cpp  Application.h  main.cpp
src/Core/: ApplcationCore.cpp  ApplicationCore.cpp  IApplicationCore.h  Player.cpp  Player.h  Storage.cpp  Team.cpp  Team.h  Utils.cpp
src/Menu/: AddPlayerMenu.cpp  AnalyticsMenu.cpp  CreateMenu.cpp  DeleteMenu.cpp  EditMenu.cpp  MainMenu.cpp  Menu.h  MenuFactory.h  SortMenu.cpp  TUIMenuFactory.cpp  ViewTeamMenu.cpp
src/Message/: ConfirmMSG.cpp  FatalErrorMSG.cpp  NotificationMSG.cpp
src/UI/: ConsoleManager.cpp  EditBox.cpp  EditLine.cpp  Image.cpp  Slider.cpp  TUI.cpp  TextBox.cpp  UI.cpp  UIFactory.cpp
src/UI/Widgets/: EditLine.cpp
tests/: CMakeLists.txt  PlayerTest.cpp  StorageTest.cpp  TeamTest.cpp
